MultistepForm: Fix Thank You Page on Mobile

--- a/src/sass/non-embed-multistep.scss
+++ b/src/sass/non-embed-multistep.scss
@@ -168,13 +168,6 @@
     h1 {
       letter-spacing: -1px;
     }
-
-    .en__component--copyblock:not(.move-before-transaction-donationamt) {
-      h2.section-header {
-        // letter-spacing: -1px;
-        // font-size: 48px;
-      }
-    }
   }
 
   @media screen and (max-width: 500px) {
